# mgf_ops

./: .gitignore  CLAUDE.md  Makefile  README.md  license.txt  pyproject.toml  setup.py
__dev/: dev.py  simple_mgf.toml  simple_mgf_parser.py  timstofu_compatibility.py
mgf_ops/: __init__.py  charges.py  indexing.py  math.py  readers.py  sortops.py  stats.py  str_ops.py  writers.py
mgf_ops/cli/: change.py  cut_and_index_precursors.py  msms.py  postprocess_pmsms.py  split.py  write.py
mgf_ops/configs/: sage2peaks_nointensity.toml  sage2peaks_withintensity.toml
tests/: test_msms2mgf.py
tools/: mgf_change_headers.py  split_mgf.py
