[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="mgf_ops"
version="0.0.2"
description="Tools for mgf operations: the wrong format for its age."
readme="README.md"
authors=[
    {name="Mateusz Krzysztof Łącki",email="matteo.lacki@gmail.com"},
    {name="Michał Piotr Startek",email="michalsta@mimuw.edu.pl"},
]
dependencies = [
    "click" ,
    "duckdb",
    "pandas",
    "numpy",
    "numba",
    "numba_progress",
    "mmappet @git+https://github.com/michalsta/mmappet.git",
    "dictodot @git+https://github.com/MatteoLacki/dictodot.git",
    "tqdm",
]
[project.optional-dependencies]
dev = [
    "ipython",
    "matplotlib",
]

[project.scripts]
write_mgf = "mgf_ops.cli.write:write_mgf"
split_mgf = "mgf_ops.cli.split:split_mgf"
change_mgf_headers = "mgf_ops.cli.change:change_mgf_headers"
msms2mgf = "mgf_ops.cli.msms:msms2mgf_cli"

[project.urls]
homepage="https://github.com/midiaIDorg/mgf_ops.git"
repository="https://github.com/midiaIDorg/mgf_ops.git"

[tool.setuptools.package-data]
mgf_ops = ["configs/*.toml"]